tests/ui/associated-inherent-types/private-in-public.stderr
error: private associated type `PubTy::PrivAssocTy` in public interface (error E0446)
  --> $DIR/private-in-public.rs:12:1
   |
LL | pub type PubAlias0 = PubTy::PrivAssocTy;
   | ^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #34537 <https://github.com/rust-lang/rust/issues/34537>
note: the lint level is defined here
  --> $DIR/private-in-public.rs:5:9
   |
LL | #![deny(private_in_public)]
   |         ^^^^^^^^^^^^^^^^^

warning: associated type `PubTy::PrivAssocTy` is more private than the item `PubAlias0`
  --> $DIR/private-in-public.rs:12:1
   |
LL | pub type PubAlias0 = PubTy::PrivAssocTy;
   | ^^^^^^^^^^^^^^^^^^ type alias `PubAlias0` is reachable at visibility `pub`
   |
note: but associated type `PubTy::PrivAssocTy` is only usable at visibility `pub(crate)`
  --> $DIR/private-in-public.rs:27:5
   |
LL |     type PrivAssocTy = ();
   |     ^^^^^^^^^^^^^^^^
note: the lint level is defined here
  --> $DIR/private-in-public.rs:6:9
   |
LL | #![warn(private_interfaces)]
   |         ^^^^^^^^^^^^^^^^^^

error: private type `PrivTy` in public interface (error E0446)
  --> $DIR/private-in-public.rs:16:1
   |
LL | pub type PubAlias1 = PrivTy::PubAssocTy;
   | ^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #34537 <https://github.com/rust-lang/rust/issues/34537>

warning: type `PrivTy` is more private than the item `PubAlias1`
  --> $DIR/private-in-public.rs:16:1
   |
LL | pub type PubAlias1 = PrivTy::PubAssocTy;
   | ^^^^^^^^^^^^^^^^^^ type alias `PubAlias1` is reachable at visibility `pub`
   |
note: but type `PrivTy` is only usable at visibility `pub(crate)`
  --> $DIR/private-in-public.rs:31:1
   |
LL | struct PrivTy;
   | ^^^^^^^^^^^^^

error: private type `PrivTy` in public interface (error E0446)
  --> $DIR/private-in-public.rs:20:1
   |
LL | pub type PubAlias2 = PubTy::PubAssocTy<PrivTy>;
   | ^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #34537 <https://github.com/rust-lang/rust/issues/34537>

warning: type `PrivTy` is more private than the item `PubAlias2`
  --> $DIR/private-in-public.rs:20:1
   |
LL | pub type PubAlias2 = PubTy::PubAssocTy<PrivTy>;
   | ^^^^^^^^^^^^^^^^^^ type alias `PubAlias2` is reachable at visibility `pub`
   |
note: but type `PrivTy` is only usable at visibility `pub(crate)`
  --> $DIR/private-in-public.rs:31:1
   |
LL | struct PrivTy;
   | ^^^^^^^^^^^^^

error: aborting due to 3 previous errors; 3 warnings emitted

